Move diagnostics modules to examples directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,6 @@ add_subdirectory(cloned_repositories/gtest)
 add_subdirectory(cloned_repositories/fmtlib)
 add_subdirectory(modules/yae_core)
 add_subdirectory(modules/yae_core_tests)
-add_subdirectory(modules/diag/yae_a)
-add_subdirectory(modules/diag/yae_b)
-add_subdirectory(modules/diag/yae_c)
+add_subdirectory(modules/examples/yae_example_library)
+add_subdirectory(modules/examples/yae_example_header_only)
+add_subdirectory(modules/examples/yae_example_executable)
