--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,13 @@ set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 set(YAE_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_subdirectory(cloned_repositories/fmtlib)
-add_subdirectory(cloned_repositories/gtest)
+add_subdirectory(cloned_repositories/fmtlib SYSTEM)
+add_subdirectory(cloned_repositories/gtest SYSTEM)
+add_subdirectory(cloned_repositories/gbench SYSTEM)
 add_subdirectory(modules/examples/yae_example_library)
 add_subdirectory(modules/examples/yae_example_header_only)
 add_subdirectory(modules/examples/yae_example_executable)
+add_subdirectory(modules/examples/yae_example_benchmark)
 add_subdirectory(modules/examples/yae_example_tests)
 
 enable_testing()
