--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,10 @@ set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(YAE_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(cloned_repositories/fmtlib SYSTEM)
+option(INSTALL_GTEST OFF)
+option(BUILD_GMOCK OFF)
 add_subdirectory(cloned_repositories/gtest SYSTEM)
+option(BENCHMARK_ENABLE_TESTING OFF)
 add_subdirectory(cloned_repositories/gbench SYSTEM)
 add_subdirectory(modules/examples/yae_example_library)
 add_subdirectory(modules/examples/yae_example_header_only)
