Allows multiple targets that use same repository

--- a/modules/examples/yae_example_executable/CMakeLists.txt
+++ b/modules/examples/yae_example_executable/CMakeLists.txt
@@ -6,6 +6,6 @@ add_executable(yae_example_executable ${module_source_files})
 set_generic_compiler_options(yae_example_executable PRIVATE)
 target_link_libraries(yae_example_executable PUBLIC yae_example_header_only
                                                     yae_example_library
-                                                    fmt::fmt-header-only)
+                                                    fmt)
 target_include_directories(yae_example_executable PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/public)
 target_include_directories(yae_example_executable PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/code/private)
