--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,13 @@ set(YAE_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 # ---------------------------- External Dependencies -----------------------------
 
-# https://github.com/fmtlib/fmt 10.1.1
-add_subdirectory(cloned_repositories/fmt/10_1_1 SYSTEM)
-
 # https://github.com/google/googletest v1.14.0
 option(INSTALL_GTEST OFF)
 option(BUILD_GMOCK OFF)
 add_subdirectory(cloned_repositories/google/googletest/1_14_0 SYSTEM)
+
+# https://github.com/fmtlib/fmt 10.1.1
+add_subdirectory(cloned_repositories/fmt/10_1_1 SYSTEM)
 
 # https://github.com/google/benchmark v1.8.3
 option(BENCHMARK_ENABLE_TESTING OFF)
@@ -28,7 +28,9 @@ add_subdirectory(cloned_repositories/google/googlebench/1_8_3 SYSTEM)
 add_subdirectory(modules/examples/yae_example_library)
 add_subdirectory(modules/examples/yae_example_header_only)
 add_subdirectory(modules/examples/yae_example_executable)
+add_subdirectory(modules/examples/yae_example_tests_main)
 add_subdirectory(modules/examples/yae_example_benchmark)
+add_subdirectory(modules/examples/yae_example_benchmark_main)
 add_subdirectory(modules/examples/yae_example_tests)
 
 enable_testing()
