--- a/modules/examples/yae_example_executable/CMakeLists.txt
+++ b/modules/examples/yae_example_executable/CMakeLists.txt
@@ -4,8 +4,8 @@ set(module_source_files
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/main.cpp)
 add_executable(yae_example_executable ${module_source_files})
 set_generic_compiler_options(yae_example_executable PRIVATE)
-target_link_libraries(yae_example_executable PUBLIC yae_example_header_only
-                                                    yae_example_library
-                                                    fmt)
+target_link_libraries(yae_example_executable PRIVATE yae_example_header_only
+                                                     yae_example_library
+                                                     fmt)
 target_include_directories(yae_example_executable PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/public)
 target_include_directories(yae_example_executable PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/code/private)
