--- a/modules/examples/ecs/CMakeLists.txt
+++ b/modules/examples/ecs/CMakeLists.txt
@@ -5,6 +5,7 @@ set(module_source_files
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/ecs/component_pool.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/ecs/entity_collection.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/app.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/big_bitset.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/component_pool.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/component_type_id.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/constants.hpp
