--- a/modules/examples/ecs_tests/CMakeLists.txt
+++ b/modules/examples/ecs_tests/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.20)
 include(set_compiler_options)
 set(module_source_files
+    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/app_tests.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/entity_component_lookup_tests.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/test_app.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/test_app.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/test_components.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/tests.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/test_components.hpp)
 add_executable(ecs_tests ${module_source_files})
 set_generic_compiler_options(ecs_tests PRIVATE)
 target_link_libraries(ecs_tests PUBLIC ecs
