--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,9 +43,10 @@ add_subdirectory(modules/examples/yae_example_library)
 add_subdirectory(modules/examples/yae_example_header_only)
 add_subdirectory(modules/examples/yae_example_executable)
 add_subdirectory(modules/examples/yae_example_tests_main)
+add_subdirectory(modules/examples/ecs)
+add_subdirectory(modules/examples/ecs_benchmark)
 add_subdirectory(modules/examples/yae_example_benchmark)
 add_subdirectory(modules/examples/yae_example_raylib)
-add_subdirectory(modules/examples/ecs)
 add_subdirectory(modules/examples/ecs_tests)
 add_subdirectory(modules/examples/psr)
 add_subdirectory(modules/examples/yae_example_benchmark_main)
