--- a/modules/examples/ecs/CMakeLists.txt
+++ b/modules/examples/ecs/CMakeLists.txt
@@ -5,6 +5,7 @@ set(module_source_files
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/component_pool.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/entities_iterator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/private/entity_collection.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/system.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/app.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/component_type_id.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/constants.hpp
@@ -14,7 +15,7 @@ set(module_source_files
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/entity_id.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/internal/component_pool.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/internal/entity_has_component.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/isystem.hpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/code/public/ecs/system.hpp)
 add_library(ecs STATIC ${module_source_files})
 set_generic_compiler_options(ecs PRIVATE)
 target_link_libraries(ecs PUBLIC CppReflection
